test: tests for AbstractAdapterServlet
Refs: XRDDEV-2628